--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Tim Ferris",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "express-handlebars": "^3.0.0"
   }
 }
