--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "faker": "^4.1.0",
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
-    "mongoose": "^5.4.9"
+    "mongoose": "^5.4.9",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
