--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "express": "^4.16.4",
-    "express-fileupload": "^1.1.1-alpha.2",
-    "express-handlebars": "^3.0.0",
-    "express-session": "^1.15.6",
+    "express-fileupload": "^1.1.4",
+    "express-handlebars": "^3.0.2",
+    "express-session": "^1.16.1",
     "faker": "^4.1.0",
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
-    "mongoose": "^5.4.9",
+    "mongoose": "^5.5.1",
     "mongoose-url-slugs": "^1.0.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
